# ReadMyPaper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements.txt
docs/: readmypaper_publication_readiness_issues.md
readmypaper/: __init__.py  config.py  job_store.py  main.py  persistence.py  types.py
readmypaper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
readmypaper/services/: __init__.py  layout_filter.py  llm_cleaner.py  pdf_extractor.py  pipeline.py  reading_order.py  text_cleaner.py  tts_kokoro.py  tts_piper.py  tts_verbalizer.py  voice_catalog.py
readmypaper/static/: app.js  styles.css
readmypaper/templates/: base.html  index.html  job.html
scripts/: predownload_voices.py
tests/: conftest.py  test_api_validation.py  test_chunking.py  test_cleaning_e2e.py  test_config.py  test_installation.py  test_job_store.py  test_layout_filter.py  test_llm_cleaner.py  test_persistence.py  test_pipeline_limits.py  test_reading_order.py  test_retention.py  test_text_cleaner.py  test_types.py  test_verbalizer.py  test_voice_catalog.py
